--- a/config/config.json
+++ b/config/config.json
@@ -1,10 +1,9 @@
 {
   "development": {
     "username": "root",
-    "password": "root",
-    "database": "course-express",
+    "password": "",
+    "database": "course-express-b31s",
     "host": "localhost",
-    "port": "8889",
     "dialect": "mysql"
   },
   "test": {
